cmake_minimum_required(VERSION 3.14)

project(SourceSDK)

add_library(server SHARED)

target_compile_definitions(server PRIVATE
    RAD_TELEMETRY_DISABLED
    GAME_DLL
    VECTOR
    VERSION_SAFE_STEAM_API_INTERFACES
    PROTECTED_THINGS_ENABLE
    sprintf=use_Q_snprintf_instead_of_sprintf
    strncpy=use_Q_strncpy_instead
    _snprintf=use_Q_snprintf_instead
    HL2MP
    HL2_DLL
#    HL2_EPISODIC
    USE_NAV_MESH
)

target_link_options(server PRIVATE
    /NODEFAULTLIB:libcmt
)

if(WIN32 AND MSVC AND (CMAKE_SIZEOF_VOID_P EQUAL 4))
else()
    error("Unsupported platform")
endif()

target_include_directories(server PRIVATE
    mp/src/public
    mp/src/public/tier0
    mp/src/public/tier1
    mp/src/public/soundsystem
    mp/src/common
    mp/src/game/server
    mp/src/game/server/episodic
    mp/src/game/server/hl2
    mp/src/game/server/hl2mp
    mp/src/game/shared
    mp/src/game/shared/hl2
    mp/src/game/shared/hl2mp
    mp/src/game/client
)

target_sources(server PRIVATE
    mp/src/game/server/ai_activity.cpp
    mp/src/game/server/ai_condition.cpp
    mp/src/game/server/AI_Criteria.cpp
    mp/src/game/server/ai_initutils.cpp
    mp/src/game/server/ai_baseactor.cpp
    mp/src/game/server/ai_basehumanoid.cpp
    mp/src/game/server/ai_basenpc.cpp
    mp/src/game/server/ai_basenpc_movement.cpp
    mp/src/game/server/ai_basenpc_schedule.cpp
    mp/src/game/server/ai_basenpc_squad.cpp
    mp/src/game/server/ai_behavior.cpp
    mp/src/game/server/ai_behavior_assault.cpp
    mp/src/game/server/ai_behavior_follow.cpp
    mp/src/game/server/ai_behavior_standoff.cpp
    mp/src/game/server/ai_default.cpp
    mp/src/game/server/ai_dynamiclink.cpp
    mp/src/game/server/ai_event.cpp
    mp/src/game/server/ai_goalentity.cpp
    mp/src/game/server/ai_hint.cpp
    mp/src/game/server/ai_hull.cpp
    mp/src/game/server/AI_Interest_Target.cpp
    mp/src/game/server/ai_link.cpp
    mp/src/game/server/ai_localnavigator.cpp
    mp/src/game/server/ai_memory.cpp
    mp/src/game/server/ai_motor.cpp
    mp/src/game/server/ai_moveprobe.cpp
    mp/src/game/server/ai_moveshoot.cpp
    mp/src/game/server/ai_movesolver.cpp
    mp/src/game/server/ai_namespaces.cpp
    mp/src/game/server/ai_navigator.cpp
    mp/src/game/server/ai_network.cpp
    mp/src/game/server/ai_networkmanager.cpp
    mp/src/game/server/ai_node.cpp
    mp/src/game/server/ai_pathfinder.cpp
    mp/src/game/server/ai_planesolver.cpp
    mp/src/game/server/ai_playerally.cpp
    mp/src/game/server/AI_ResponseSystem.cpp
    mp/src/game/server/ai_route.cpp
    mp/src/game/server/ai_saverestore.cpp
    mp/src/game/server/ai_schedule.cpp
    mp/src/game/server/ai_senses.cpp
    mp/src/game/server/ai_speech.cpp
    mp/src/game/server/ai_squad.cpp
    mp/src/game/server/ai_squadslot.cpp
    mp/src/game/server/ai_tacticalservices.cpp
    mp/src/game/server/ai_task.cpp
    mp/src/game/server/ai_utils.cpp
    mp/src/game/server/ai_waypoint.cpp
    mp/src/game/server/baseanimating.cpp
    mp/src/game/server/BaseAnimatingOverlay.cpp
    mp/src/game/server/basecombatcharacter.cpp
    mp/src/game/server/basecombatweapon.cpp
    mp/src/game/server/baseentity.cpp
    mp/src/game/server/baseflex.cpp
    mp/src/game/server/basemultiplayerplayer.cpp
    mp/src/game/server/basetempentity.cpp
    mp/src/game/server/baseviewmodel.cpp
    mp/src/game/server/cbase.cpp
    mp/src/game/server/client.cpp
    mp/src/game/server/CommentarySystem.cpp
    mp/src/game/server/cplane.cpp
    mp/src/game/server/CRagdollMagnet.cpp
    mp/src/game/server/damagemodifier.cpp
    mp/src/game/server/doors.cpp
    mp/src/game/server/effects.cpp
    mp/src/game/server/EffectsServer.cpp
    mp/src/game/server/entityblocker.cpp
    mp/src/game/server/entitylist.cpp
    mp/src/game/server/EntityFlame.cpp
    mp/src/game/server/EntityDissolve.cpp
    mp/src/game/server/EntityParticleTrail.cpp
    mp/src/game/server/env_player_surface_trigger.cpp
    mp/src/game/server/env_zoom.cpp
    mp/src/game/server/envmicrophone.cpp
    mp/src/game/server/EnvSpark.cpp
    mp/src/game/server/EventLog.cpp
    mp/src/game/server/event_tempentity_tester.cpp
    mp/src/game/server/explode.cpp
    mp/src/game/server/filters.cpp
    mp/src/game/server/fire.cpp
    mp/src/game/server/fire_smoke.cpp
    mp/src/game/server/fogcontroller.cpp
    mp/src/game/server/func_areaportal.cpp
    mp/src/game/server/func_areaportalbase.cpp
    mp/src/game/server/func_areaportalwindow.cpp
    mp/src/game/server/func_break.cpp
    mp/src/game/server/func_breakablesurf.cpp
    mp/src/game/server/func_dust.cpp
    mp/src/game/server/func_ladder_endpoint.cpp
    mp/src/game/server/func_lod.cpp
    mp/src/game/server/func_movelinear.cpp
    mp/src/game/server/func_occluder.cpp
    mp/src/game/server/func_reflective_glass.cpp
    mp/src/game/server/func_smokevolume.cpp
    mp/src/game/server/game.cpp
    mp/src/game/server/gameinterface.cpp
    mp/src/game/server/GameStats_BasicStatsFunctions.cpp
    mp/src/game/server/gametrace_dll.cpp
    mp/src/game/server/gameweaponmanager.cpp
    mp/src/game/server/globals.cpp
    mp/src/game/server/globalstate.cpp
    mp/src/game/server/gib.cpp
    mp/src/game/server/h_ai.cpp
    mp/src/game/server/hierarchy.cpp
    mp/src/game/server/hl2/ai_behavior_actbusy.cpp
    mp/src/game/server/hl2/combine_mine.cpp
    mp/src/game/server/hl2/grenade_frag.cpp
    mp/src/game/server/hl2/npc_barnacle.cpp
    mp/src/game/server/hl2/hl_playermove.cpp
    mp/src/game/server/hl2/hl2_eventlog.cpp
    mp/src/game/server/hl2/hl2_player.cpp
    mp/src/game/server/hl2/hl2_playerlocaldata.cpp
    mp/src/game/server/hl2/npc_playercompanion.cpp
    mp/src/game/server/hl2/prop_combine_ball.cpp
    mp/src/game/server/hl2/script_intro.cpp
    mp/src/game/server/hl2/te_gaussexplosion.cpp
    mp/src/game/server/hl2mp/hl2mp_client.cpp
    mp/src/game/server/hl2mp/hl2mp_cvars.cpp
    mp/src/game/server/hl2mp/hl2mp_gameinterface.cpp
    mp/src/game/server/hl2mp/hl2mp_player.cpp
    mp/src/game/server/hl2mp/te_hl2mp_shotgun_shot.cpp
    mp/src/game/server/hltvdirector.cpp
    mp/src/game/server/info_camera_link.cpp
    mp/src/game/server/info_overlay_accessor.cpp
    mp/src/game/server/init_factory.cpp
    mp/src/game/server/item_world.cpp
    mp/src/game/server/mapentities.cpp
    mp/src/game/server/message_entity.cpp
    mp/src/game/server/modelentities.cpp
    mp/src/game/server/movehelper_server.cpp
    mp/src/game/server/movement.cpp
    mp/src/game/server/nav_area.cpp
    mp/src/game/server/nav_colors.cpp
    mp/src/game/server/nav_edit.cpp
    mp/src/game/server/nav_entities.cpp
    mp/src/game/server/nav_file.cpp
    mp/src/game/server/nav_generate.cpp
    mp/src/game/server/nav_ladder.cpp
    mp/src/game/server/nav_merge.cpp
    mp/src/game/server/nav_mesh.cpp
    mp/src/game/server/nav_mesh_factory.cpp
    mp/src/game/server/nav_node.cpp
    mp/src/game/server/ndebugoverlay.cpp
    mp/src/game/server/pathtrack.cpp
    mp/src/game/server/physics.cpp
    mp/src/game/server/physics_bone_follower.cpp
    mp/src/game/server/physics_fx.cpp
    mp/src/game/server/physics_impact_damage.cpp
    mp/src/game/server/physics_main.cpp
    mp/src/game/server/physics_npc_solver.cpp
    mp/src/game/server/physics_prop_ragdoll.cpp
    mp/src/game/server/physconstraint.cpp
    mp/src/game/server/physobj.cpp
    mp/src/game/server/plasma.cpp
    mp/src/game/server/player.cpp
    mp/src/game/server/player_command.cpp
    mp/src/game/server/player_lagcompensation.cpp
    mp/src/game/server/playerlocaldata.cpp
    mp/src/game/server/player_pickup.cpp
    mp/src/game/server/player_resource.cpp
    mp/src/game/server/point_camera.cpp
    mp/src/game/server/point_template.cpp
    mp/src/game/server/props.cpp
    mp/src/game/server/RagdollBoogie.cpp
    mp/src/game/server/ragdoll_manager.cpp
    mp/src/game/server/recipientfilter.cpp
    mp/src/game/server/saverestore_gamedll.cpp
    mp/src/game/server/sceneentity.cpp
    mp/src/game/server/scripted.cpp
    mp/src/game/server/sendproxy.cpp
    mp/src/game/server/serverbenchmark_base.cpp
    mp/src/game/server/ServerNetworkProperty.cpp
    mp/src/game/server/SkyCamera.cpp
    mp/src/game/server/sound.cpp
    mp/src/game/server/soundent.cpp
    mp/src/game/server/subs.cpp
    mp/src/game/server/tactical_mission.cpp
    mp/src/game/server/te.cpp
    mp/src/game/server/te_armorricochet.cpp
    mp/src/game/server/te_basebeam.cpp
    mp/src/game/server/te_beamentpoint.cpp
    mp/src/game/server/te_beaments.cpp
    mp/src/game/server/te_beamfollow.cpp
    mp/src/game/server/te_beamlaser.cpp
    mp/src/game/server/te_beampoints.cpp
    mp/src/game/server/te_beamring.cpp
    mp/src/game/server/te_beamringpoint.cpp
    mp/src/game/server/te_beamspline.cpp
    mp/src/game/server/te_bloodstream.cpp
    mp/src/game/server/te_bloodsprite.cpp
    mp/src/game/server/te_breakmodel.cpp
    mp/src/game/server/te_bspdecal.cpp
    mp/src/game/server/te_bubbles.cpp
    mp/src/game/server/te_bubbletrail.cpp
    mp/src/game/server/te_clientprojectile.cpp
    mp/src/game/server/te_decal.cpp
    mp/src/game/server/te_dynamiclight.cpp
    mp/src/game/server/te_effect_dispatch.cpp
    mp/src/game/server/te_energysplash.cpp
    mp/src/game/server/te_explosion.cpp
    mp/src/game/server/te_fizz.cpp
    mp/src/game/server/te_footprintdecal.cpp
    mp/src/game/server/te_glassshatter.cpp
    mp/src/game/server/te_glowsprite.cpp
    mp/src/game/server/te_impact.cpp
    mp/src/game/server/te_killplayerattachments.cpp
    mp/src/game/server/te_largefunnel.cpp
    mp/src/game/server/te_muzzleflash.cpp
    mp/src/game/server/te_particlesystem.cpp
    mp/src/game/server/te_physicsprop.cpp
    mp/src/game/server/te_playerdecal.cpp
    mp/src/game/server/te_projecteddecal.cpp
    mp/src/game/server/te_showline.cpp
    mp/src/game/server/te_smoke.cpp
    mp/src/game/server/te_sparks.cpp
    mp/src/game/server/te_sprite.cpp
    mp/src/game/server/te_spritespray.cpp
    mp/src/game/server/te_worlddecal.cpp
    mp/src/game/server/team.cpp
    mp/src/game/server/team_control_point.cpp
    mp/src/game/server/team_control_point_master.cpp
    mp/src/game/server/team_control_point_round.cpp
    mp/src/game/server/team_objectiveresource.cpp
    mp/src/game/server/team_train_watcher.cpp
    mp/src/game/server/TemplateEntities.cpp
    mp/src/game/server/textstatsmgr.cpp
    mp/src/game/server/timedeventmgr.cpp
    mp/src/game/server/toolframework_server.cpp
    mp/src/game/server/trains.cpp
    mp/src/game/server/triggers.cpp
    mp/src/game/server/trigger_area_capture.cpp
    mp/src/game/server/util.cpp
    mp/src/game/server/variant_t.cpp
    mp/src/game/server/vehicle_baseserver.cpp
    mp/src/game/server/vote_controller.cpp
    mp/src/game/server/waterbullet.cpp
    mp/src/game/server/wcedit.cpp
    mp/src/game/server/world.cpp
    mp/src/game/shared/achievement_saverestore.cpp
    mp/src/game/shared/achievementmgr.cpp
    mp/src/game/shared/activitylist.cpp
    mp/src/game/shared/ammodef.cpp
    mp/src/game/shared/animation.cpp
    mp/src/game/shared/collisionproperty.cpp
    mp/src/game/shared/debugoverlay_shared.cpp
    mp/src/game/shared/entitylist_base.cpp
    mp/src/game/shared/eventlist.cpp
    mp/src/game/shared/baseachievement.cpp
    mp/src/game/shared/basecombatcharacter_shared.cpp
    mp/src/game/shared/basecombatweapon_shared.cpp
    mp/src/game/shared/baseentity_shared.cpp
    mp/src/game/shared/basegrenade_shared.cpp
    mp/src/game/shared/baseparticleentity.cpp
    mp/src/game/shared/base_playeranimstate.cpp
    mp/src/game/shared/baseplayer_shared.cpp
    mp/src/game/shared/baseprojectile.cpp
    mp/src/game/shared/baseviewmodel_shared.cpp
    mp/src/game/shared/beam_shared.cpp
    mp/src/game/shared/choreoactor.cpp
    mp/src/game/shared/choreochannel.cpp
    mp/src/game/shared/choreoevent.cpp
    mp/src/game/shared/choreoscene.cpp
    mp/src/game/shared/death_pose.cpp
    mp/src/game/shared/decals.cpp
    mp/src/game/shared/effect_dispatch_data.cpp
    mp/src/game/shared/EntityParticleTrail_Shared.cpp
    mp/src/game/shared/env_wind_shared.cpp
    mp/src/game/shared/func_ladder.cpp
    mp/src/game/shared/gamemovement.cpp
    mp/src/game/shared/gamerules.cpp
    mp/src/game/shared/gamerules_register.cpp
    mp/src/game/shared/GameStats.cpp
    mp/src/game/shared/gamestringpool.cpp
    mp/src/game/shared/gamevars_shared.cpp
    mp/src/game/shared/hintsystem.cpp
    mp/src/game/shared/hintmessage.cpp
    mp/src/game/shared/hl2/basehlcombatweapon_shared.cpp
    mp/src/game/shared/hl2/hl_gamemovement.cpp
    mp/src/game/shared/hl2/hl2_gamerules.cpp
    mp/src/game/shared/hl2/hl2_usermessages.cpp
    mp/src/game/shared/hl2mp/hl2mp_gamerules.cpp
    mp/src/game/shared/hl2mp/hl2mp_player_shared.cpp
    mp/src/game/shared/hl2mp/hl2mp_weapon_parse.cpp
    mp/src/game/shared/hl2mp/weapon_frag.cpp
    mp/src/game/shared/hl2mp/weapon_hl2mpbase.cpp
    mp/src/game/shared/hl2mp/weapon_hl2mpbasehlmpcombatweapon.cpp
    mp/src/game/shared/hl2mp/weapon_physcannon.cpp
    mp/src/game/shared/igamesystem.cpp
    mp/src/game/shared/interval.cpp
    mp/src/game/shared/mapentities_shared.cpp
    mp/src/game/shared/ModelSoundsCache.cpp
    mp/src/game/shared/movevars_shared.cpp
    mp/src/game/shared/mp_shareddefs.cpp
    mp/src/game/shared/multiplay_gamerules.cpp
    mp/src/game/shared/obstacle_pushaway.cpp
    mp/src/game/shared/particle_parse.cpp
    mp/src/game/shared/particlesystemquery.cpp
    mp/src/game/shared/physics_saverestore.cpp
    mp/src/game/shared/physics_shared.cpp
    mp/src/game/shared/physics_main_shared.cpp
    mp/src/game/shared/precache_register.cpp
    mp/src/game/shared/predictableid.cpp
    mp/src/game/shared/props_shared.cpp
    mp/src/game/shared/querycache.cpp
    mp/src/game/shared/ragdoll_shared.cpp
    mp/src/game/shared/saverestore.cpp
    mp/src/game/shared/sceneentity_shared.cpp
    mp/src/game/shared/script_intro_shared.cpp
    mp/src/game/shared/sequence_Transitioner.cpp
    mp/src/game/shared/simtimer.cpp
    mp/src/game/shared/singleplay_gamerules.cpp
    mp/src/game/shared/SoundEmitterSystem.cpp
    mp/src/game/shared/soundenvelope.cpp
    mp/src/game/shared/Sprite.cpp
    mp/src/game/shared/SpriteTrail.cpp
    mp/src/game/shared/takedamageinfo.cpp
    mp/src/game/shared/teamplay_gamerules.cpp
    mp/src/game/shared/teamplayroundbased_gamerules.cpp
    mp/src/game/shared/usercmd.cpp
    mp/src/game/shared/usermessages.cpp
    mp/src/game/shared/util_shared.cpp
    mp/src/game/shared/voice_gamemgr.cpp
    mp/src/game/shared/weapon_parse.cpp
    mp/src/game/shared/weapon_proficiency.cpp
    mp/src/public/bone_setup.cpp
    mp/src/public/collisionutils.cpp
    mp/src/public/dt_recv.cpp
    mp/src/public/dt_send.cpp
    mp/src/public/dt_utlvector_common.cpp
    mp/src/public/dt_utlvector_send.cpp
    mp/src/public/dt_utlvector_recv.cpp
    mp/src/public/editor_sendcommand.cpp
    mp/src/public/haptics/haptic_msgs.cpp
    mp/src/public/haptics/haptic_utils.cpp
    mp/src/public/interpolatortypes.cpp
    mp/src/public/keyframe/keyframe.cpp
    mp/src/public/registry.cpp
    mp/src/public/rope_physics.cpp
    mp/src/public/server_class.cpp
    mp/src/public/simple_physics.cpp
    mp/src/public/studio.cpp
    mp/src/public/stringregistry.cpp
    mp/src/public/SoundParametersInternal.cpp
    mp/src/tier1/bitbuf.cpp
    mp/src/tier1/byteswap.cpp
    mp/src/tier1/characterset.cpp
    mp/src/tier1/checksum_crc.cpp
    mp/src/tier1/checksum_md5.cpp
    mp/src/tier1/convar.cpp
    mp/src/tier1/datamanager.cpp
    mp/src/tier1/generichash.cpp
    mp/src/tier1/interface.cpp
    mp/src/tier1/KeyValues.cpp
    mp/src/tier1/mempool.cpp
    mp/src/tier1/memstack.cpp
    mp/src/tier1/strtools.cpp
    mp/src/tier1/strtools_unicode.cpp
    mp/src/tier1/stringpool.cpp
    mp/src/tier1/tier1.cpp
    mp/src/tier1/uniqueid.cpp
    mp/src/tier1/utlbinaryblock.cpp
    mp/src/tier1/utlbuffer.cpp
    mp/src/tier1/utlbufferutil.cpp
    mp/src/tier1/utlstring.cpp
    mp/src/tier1/utlsymbol.cpp
    mp/src/mathlib/3dnow.cpp
    mp/src/mathlib/color_conversion.cpp
    mp/src/mathlib/IceKey.cpp
    mp/src/mathlib/mathlib_base.cpp
    mp/src/mathlib/randsse.cpp
    mp/src/mathlib/sse.cpp
    mp/src/mathlib/sseconst.cpp
    mp/src/mathlib/vmatrix.cpp
)

target_link_libraries(server PRIVATE
    Rpcrt4.lib # UidCreate
    legacy_stdio_definitions # _sscanf
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/dmxloader.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/particles.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/steam_api.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/tier0.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/tier2.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/tier3.lib
    ${CMAKE_SOURCE_DIR}/mp/src/lib/public/vstdlib.lib
)